# Agentic-Writing-Workbench

./: .env.shared.example  .gitignore  CHANGE.md  LICENSE  QUICK-START.md  README.md  README.zh-CN.md  TRADEMARKS.md  pyproject.toml  requirements.txt  upgrade-manifest.json
app/: __init__.py  ai_provider_bridge.py  ai_provider_jobs.py  ai_providers.py  ai_web_bridge.py  app_upgrade.py  chapter_material_index.py  chapter_summary.py  chat_history.py  chroma_client.py  config.py  confirm_writeback.py  embeddings.py  file_update_flow.py  final_text_cleaner.py  intervene_policy.py  intervene_stats.py  llm_client.py  novel_artifacts.py  novel_context.py  novel_skills.py  outline_writeback.py  output_index.py  pending_intent_memory.py  project_artifacts.py  project_impact.py  project_kinds.py  project_paths.py  project_structure.py  project_wiki.py  project_wiki_events.py  prose_locator.py  prose_merge.py  provider_answer_review.py  provider_prompt_file.py  reference_importer.py  short_film_skill_store.py  short_film_skills.py  short_film_visual_flow.py  workflow_status.py  (+29 more)
app/static-writing/: app.js  index.html  styles.css
projects/writing/: .gitignore  AGENT-CODING-STANDARDS.md  AGENTS.md  README.md  project.yaml  writing_paths.py
projects/writing/data/: writing-technique-knowledge.json  writing-technique-knowledge.md
projects/writing/novel-acquisition/: analyzer.py  anchor-expander.py  anchor-matcher.py  downloader.py  five-dim-search.py  (+2 more)
scripts/: publish-release.py  restart-workbench.py  test-upgrade-workflow.py  upgrade-to-latest.py  validate-writing-project.py
(+96 files in other folders)
