[project]
name = "agent-work"
version = "0.1.0"
description = "Multi-agent project workspace with HTTP sidecar ChromaDB and Embedding services."
requires-python = ">=3.13,<3.15"
dependencies = [
  "langchain",
  "langchain-community",
  "langchain-openai",
  "langgraph",
  "langgraph-checkpoint-sqlite",
  "httpx",
  "pydantic",
  "python-dotenv",
  "pyyaml",
  "typer",
  "rich",
  "fastapi",
  "uvicorn",
  "python-multipart",
  "scikit-learn",
  "jieba",
  "faiss-cpu",
  "playwright",
]

[tool.pytest.ini_options]
pythonpath = ["."]
